feat: Enhance code quality and maintainability
- Added linting and formatting scripts to package.json for improved code consistency.
- Refactored background.js to remove unused imports and clean up code structure.
- Improved content-script.js by enhancing readability and consistency in event handling.
- Updated options.html and popup.html for better formatting and structure.
- Refactored options.js and popup.js to improve readability and maintainability, including consistent use of lodash for safe property access.
- Cleaned up constants.js and helpers.js by removing unused imports and improving code clarity.
- Enhanced storage.js to streamline data import functionality and maintain code consistency.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "clean": "rimraf dist",
     "package": "npm run build && cd dist && zip -r ../hirehack-extension.zip .",
     "lint": "eslint src --ext .js",
-    "format": "prettier --write src/**/*.{js,html,css}"
+    "lint:fix": "eslint src --ext .js --fix",
+    "format": "prettier --write src/**/*.{js,html,css}",
+    "format:check": "prettier --check src/**/*.{js,html,css}"
   },
   "devDependencies": {
     "@babel/core": "^7.22.0",
