refactor: streamline icon references and consolidate icon files in manifest

--- a/manifest.json
+++ b/manifest.json
@@ -3,14 +3,8 @@
   "name": "HireHack",
   "version": "1.0.0",
   "description": "Automate LinkedIn EasyApply job applications with smart filtering and tracking",
-  "permissions": [
-    "storage",
-    "activeTab",
-    "scripting"
-  ],
-  "host_permissions": [
-    "https://*.linkedin.com/*"
-  ],
+  "permissions": ["storage", "activeTab", "scripting"],
+  "host_permissions": ["https://*.linkedin.com/*"],
   "background": {
     "service_worker": "background.js"
   },
@@ -25,15 +19,15 @@
     "default_popup": "popup.html",
     "default_title": "HireHack Auto-Apply",
     "default_icon": {
-      "16": "icons/icon16.png",
-      "48": "icons/icon48.png",
-      "128": "icons/icon128.png"
+      "16": "icons/icon.png",
+      "48": "icons/icon.png",
+      "128": "icons/icon.png"
     }
   },
   "options_page": "options.html",
   "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
+    "16": "icons/icon.png",
+    "48": "icons/icon.png",
+    "128": "icons/icon.png"
   }
 }
